<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.waibleapp.waible.fragments.AuthFragment">

    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:text="@string/auth_app_title_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auth_app_title_one"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="@+id/auth_app_title_two"
            app:layout_constraintBottom_toTopOf="@+id/auth_app_title_two" />

        <TextView
            android:text="@string/auth_app_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auth_app_title_two"
            android:textSize="45sp"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/auth_email_text_view"
            android:layout_marginBottom="32dp" />

        <TextView
            android:text="@string/auth_email_text_view"
            android:layout_width="250dp"
            android:layout_height="16dp"
            android:id="@+id/auth_email_text_view"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/auth_email_edit_text"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/auth_email_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/auth_password_text_view"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorWhite"/>

        <TextView
            android:text="@string/auth_password_text_view"
            android:layout_width="250dp"
            android:layout_height="16dp"
            android:id="@+id/auth_password_text_view"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/auth_password_edit_text"
            android:layout_marginBottom="8dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/auth_password_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/auth_login_button"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorWhite"/>

        <Button
            android:text="@string/auth_login_button"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:id="@+id/auth_login_button"
            app:layout_constraintBottom_toTopOf="@+id/auth_go_to_register"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorAction"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:text="@string/auth_go_to_register"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:id="@+id/auth_go_to_register"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            android:textSize="17sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="center"/>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
