<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.waibleapp.waible.fragments.RestaurantFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:text="@string/main_title_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_title_one"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="@+id/main_restaurant_name"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_restaurant_name"
        android:textSize="45sp"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title_one" />

    <Button
        android:text="@string/see_menu_button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:id="@+id/see_menu_button"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/call_waiter_button"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAction"
        android:textColor="@color/colorWhite"/>

    <Button
        android:text="@string/call_waiter_button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:id="@+id/call_waiter_button"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/get_check_button"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAction"
        android:textColor="@color/colorWhite"/>

    <Button
        android:text="@string/get_check_button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:id="@+id/get_check_button"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAction"
        android:textColor="@color/colorWhite"/>

    <RelativeLayout
        android:id="@+id/main_fragment_loading_panel"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
